[gd_scene load_steps=36 format=2]

[ext_resource path="res://Menu/New_Screen.gd" type="Script" id=1]
[ext_resource path="res://Menu/Grass_field-1.png.png" type="Texture" id=2]
[ext_resource path="res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/architect-s-daughter/ArchitectsDaughter.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menu/opening-cutscene-_1_.ogv" type="VideoStream" id=4]
[ext_resource path="res://Menu/setting_style.tres" type="StyleBox" id=5]
[ext_resource path="res://Menu/setting_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Menu/setting_normal.tres" type="StyleBox" id=7]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=4]
size = 250
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.203922, 0.960784, 0.533333, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.113725, 0.533333, 0.294118, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.580392, 0.372549, 0.0392157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=23]
size = 150
font_data = SubResource( 1 )
fallback/0 = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=20]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=24]
size = 150
font_data = SubResource( 20 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.203922, 0.960784, 0.533333, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_right = 100

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.580392, 0.372549, 0.0392157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_right = 100
corner_radius_bottom_right = 4

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.192157, 0.192157, 0.192157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFontData" id=17]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=18]
size = 150
font_data = SubResource( 17 )

[sub_resource type="DynamicFontData" id=19]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=25]
size = 100
font_data = SubResource( 19 )

[sub_resource type="DynamicFontData" id=21]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=22]
size = 100
extra_spacing_top = -50
font_data = SubResource( 21 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=15]
size = 200
font_data = SubResource( 14 )

[sub_resource type="DynamicFontData" id=26]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=27]
size = 100
font_data = SubResource( 26 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.486275, 0.0823529, 0.0627451, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 100

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.533333, 0.145098, 0.145098, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 100

[sub_resource type="DynamicFontData" id=30]
font_path = "res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf"

[sub_resource type="DynamicFont" id=31]
size = 250
extra_spacing_bottom = 10
font_data = SubResource( 30 )
fallback/0 = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -1926.0
margin_top = -1112.0
margin_right = 1965.0
margin_bottom = 1126.0

[node name="Sprite" type="Sprite" parent="Panel"]
position = Vector2( 1917, 2717 )
scale = Vector2( 9.50753, 14.1772 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 3.5, 3.5 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = -0.096
anchor_right = -0.096
margin_left = -1689.7
margin_top = -401.0
margin_right = 1887.3
margin_bottom = 329.0
custom_constants/separation = 50

[node name="Load 1" type="Button" parent="HBoxContainer"]
margin_right = 1159.0
margin_bottom = 730.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 12 )

[node name="Label" type="Label" parent="HBoxContainer/Load 1"]
margin_left = 32.0039
margin_top = -24.0
margin_right = 1123.0
margin_bottom = 653.0
custom_fonts/font = SubResource( 23 )
text = "Name:

Current Boss:"

[node name="Load 2" type="Button" parent="HBoxContainer"]
margin_left = 1209.0
margin_right = 2368.0
margin_bottom = 730.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 12 )

[node name="Label" type="Label" parent="HBoxContainer/Load 2"]
margin_left = 56.0039
margin_top = -21.0
margin_right = 1023.0
margin_bottom = 708.0
custom_fonts/font = SubResource( 24 )
text = "Name:

Current Boss:
"

[node name="Load 3" type="Button" parent="HBoxContainer"]
margin_left = 2418.0
margin_right = 3577.0
margin_bottom = 730.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 12 )

[node name="Label" type="Label" parent="HBoxContainer/Load 3"]
margin_left = 56.0039
margin_top = -21.0
margin_right = 1023.0
margin_bottom = 708.0
custom_fonts/font = SubResource( 24 )
text = "Name:

Current Boss:
"

[node name="Back To Menu" type="Button" parent="."]
margin_left = -1804.0
margin_top = 832.0
margin_right = -1008.0
margin_bottom = 1068.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 11 )
text = "Back To Menu"

[node name="WindowDialog" type="Panel" parent="."]
visible = false
margin_left = -733.0
margin_top = -309.0
margin_right = 734.0
margin_bottom = 262.0
custom_styles/panel = SubResource( 16 )

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 15.0
margin_top = -10.0
margin_right = 1455.0
margin_bottom = 577.0
custom_fonts/font = SubResource( 18 )
text = "Do Want to erase this current save file
"
autowrap = true

[node name="Yes" type="Button" parent="WindowDialog"]
margin_left = 5.0
margin_top = 396.0
margin_right = 506.0
margin_bottom = 567.0
custom_fonts/font = SubResource( 25 )
text = "Yes"

[node name="No" type="Button" parent="WindowDialog"]
margin_left = 958.0
margin_top = 394.0
margin_right = 1459.0
margin_bottom = 565.0
custom_fonts/font = SubResource( 25 )
text = "No"

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="cancel" type="Button" parent="Popup"]
margin_left = -1031.0
margin_top = -74.0
margin_right = -936.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 22 )
text = "X"

[node name="LineEdit" type="LineEdit" parent="Popup"]
margin_left = -1030.0
margin_right = 1025.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 15 )

[node name="quick_play" type="Button" parent="."]
margin_left = 1003.0
margin_top = 829.0
margin_right = 1799.0
margin_bottom = 1065.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 27 )
custom_styles/hover = SubResource( 28 )
custom_styles/focus = SubResource( 28 )
custom_styles/normal = SubResource( 29 )
text = "Quickplay"

[node name="Popup" type="Popup" parent="quick_play"]
visible = true
margin_left = -133.0
margin_top = -601.0
margin_right = 1039.0
margin_bottom = 763.0

[node name="Panel" type="Panel" parent="quick_play/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -454.0
margin_top = -192.0
margin_right = -454.0
margin_bottom = -192.0

[node name="out" type="Button" parent="quick_play/Popup/Panel"]
margin_left = -1.0
margin_top = -57.0
margin_right = 112.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 22 )
text = "X"

[node name="VBoxContainer" type="VBoxContainer" parent="quick_play/Popup/Panel"]
margin_left = 4.0
margin_top = 18.0
margin_right = 1697.0
margin_bottom = 1898.0
rect_scale = Vector2( 0.677698, 0.677698 )

[node name="mage_finish" type="CheckButton" parent="quick_play/Popup/Panel/VBoxContainer"]
margin_right = 1693.0
margin_bottom = 310.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 31 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "mage_finish"

[node name="knight_finish" type="CheckButton" parent="quick_play/Popup/Panel/VBoxContainer"]
margin_top = 314.0
margin_right = 1693.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 31 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "knight_finish"

[node name="dragon_finish" type="CheckButton" parent="quick_play/Popup/Panel/VBoxContainer"]
margin_top = 628.0
margin_right = 1693.0
margin_bottom = 938.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 31 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "Dragon_finish"

[node name="falling_finish" type="CheckButton" parent="quick_play/Popup/Panel/VBoxContainer"]
margin_top = 942.0
margin_right = 1693.0
margin_bottom = 1252.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 31 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "falling_finish"

[node name="skeleton_finish" type="CheckButton" parent="quick_play/Popup/Panel/VBoxContainer"]
margin_top = 1256.0
margin_right = 1693.0
margin_bottom = 1566.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 31 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "skeleton_finish"

[node name="final_finish" type="CheckButton" parent="quick_play/Popup/Panel/VBoxContainer"]
margin_top = 1570.0
margin_right = 1693.0
margin_bottom = 1880.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 31 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "Final_finish"

[node name="enter" type="Button" parent="quick_play/Popup/Panel/VBoxContainer"]
margin_top = 1884.0
margin_right = 1693.0
margin_bottom = 2010.0
custom_fonts/font = SubResource( 25 )
text = "Yes"

[node name="VideoPlayer" type="VideoPlayer" parent="."]
visible = false
margin_left = -1831.0
margin_top = -1110.0
margin_right = 1806.0
margin_bottom = 1049.0
stream = ExtResource( 4 )

[connection signal="pressed" from="HBoxContainer/Load 1" to="." method="_on_Load_1_pressed"]
[connection signal="pressed" from="HBoxContainer/Load 2" to="." method="_on_Load_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Load 3" to="." method="_on_Load_3_pressed"]
[connection signal="pressed" from="Back To Menu" to="." method="_on_Back_To_Menu_pressed"]
[connection signal="pressed" from="WindowDialog/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="WindowDialog/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="Popup/cancel" to="." method="_on_cancel_pressed"]
[connection signal="text_entered" from="Popup/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="quick_play" to="." method="_on_quick_play_pressed"]
[connection signal="pressed" from="quick_play/Popup/Panel/out" to="." method="_on_out_pressed"]
[connection signal="pressed" from="quick_play/Popup/Panel/VBoxContainer/mage_finish" to="." method="_on_mage_finish_pressed"]
[connection signal="pressed" from="quick_play/Popup/Panel/VBoxContainer/knight_finish" to="." method="_on_knight_finish_pressed"]
[connection signal="pressed" from="quick_play/Popup/Panel/VBoxContainer/dragon_finish" to="." method="_on_dragon_finish_pressed"]
[connection signal="pressed" from="quick_play/Popup/Panel/VBoxContainer/falling_finish" to="." method="_on_falling_finish_pressed"]
[connection signal="pressed" from="quick_play/Popup/Panel/VBoxContainer/skeleton_finish" to="." method="_on_skeleton_finish_pressed"]
[connection signal="pressed" from="quick_play/Popup/Panel/VBoxContainer/final_finish" to="." method="_on_final_finish_pressed"]
[connection signal="pressed" from="quick_play/Popup/Panel/VBoxContainer/enter" to="." method="_on_enter_pressed"]
